--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+1.113:
+* Added support of --with-fexecve option to ./configure.  If found on a system,
+  fexecve instead of exec* is used by userhelper.  This should avoid possible
+  race conditions.  Possible values are:
+  - "yes": force fexecve
+  - "no": force exec*
+  - anything else: use fexecve if possible (default)
+
+1.112:
+* Updated translations.
+
 1.111:
 * Updated translations.
 
